crates/testing/compiletest-integration/tests/ui/undefined-variable.rs
fn main() -> i64 {
    undefined_var //~ ERROR undefined variable
}
